fix align content cards (#23)

--- a/app/assets/stylesheets/custom.sass
+++ b/app/assets/stylesheets/custom.sass
@@ -32,7 +32,7 @@ main.site-container
 h1, h2, h3, h4, h5, p, small, em, li, a
   color: #fff !important
 
-.title
+h2.title
   color: #d96969 !important
 
 section header
@@ -61,9 +61,15 @@ hr
 .uk-card .uk-card-body
   .uk-card-title
     font-size: 1.7rem !important
-
   p
     font-size: 1.2rem !important
+
+.uk-card-body
+  height: 250px
+
+.uk-card-body
+  .uk-card-title
+    height: 120px
 
 .avatar
   width: 48px
